--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         export BUILD_IMAGE=$REGISTRY_HOSTNAME/${{ secrets.GCP_PROJECT_ID }}/$SERVICE_NAME:$SHORT_SHA
         export HOSTNAME=$NAMESPACE.$TLD
         export CERT_NAME=wildcard-${TLD/./-}
-        export MONGO_URI=${{ secrets.GCP_PROJECT_ID }}
+        export MONGO_URI=${{ secrets.MONGO_URI }}
 
         echo "SHORT_SHA=$SHORT_SHA"
         echo "SERVICE_NAME=$SERVICE_NAME"
