--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,9 +18,26 @@ spec:
         app: $SERVICE_NAME
         tier: web
     spec:
+      hostAliases:
+        - hostnames:
+          - mongo-test-01
+          ip: 10.141.10.150
+        - hostnames:
+          - mongo-test-02
+          ip: 10.141.10.112
+        - hostnames:
+          - mongo-test-03
+          ip: 10.141.10.125
       containers:
         - name: $SERVICE_NAME
           image: $BUILD_IMAGE
+          resources:
+            requests:
+              memory: "1024Mi"
+              cpu: "5"
+            limits:
+              memory: "2048Mi"
+              cpu: "5"
           imagePullPolicy: Always
           envFrom:
           - configMapRef:
